...
    <string name="app_name">Emu42</string>
    <string name="filename">emu42</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="button_main_menu_content_description">Open the main menu</string>
    <string name="nav_new">New...</string>
    <string name="nav_open">Open...</string>
    <string name="nav_save">Save</string>
    <string name="nav_save_as">Save As...</string>
    <string name="nav_close">Close</string>
    <string name="nav_load_object">Load Object...</string>
    <string name="nav_save_object">Save Object...</string>
    <string name="nav_copy_screen">Copy Screen</string>
    <string name="nav_copy_fullscreen">Copy Fullscreen</string>
	<string name="nav_copy_stack_visible">Copy Visible Stack</string>
    <string name="nav_copy_stack">Copy Stack</string>
    <string name="nav_recents">Recent</string>
    <string name="nav_edit">Edit</string>
    <string name="nav_paste_stack">Paste Stack</string>
    <string name="nav_reset_calculator">Reset Calculator</string>
    <string name="nav_save_backup">Save Backup</string>
    <string name="nav_restore_backup">Restore Backup</string>
    <string name="nav_delete_backup">Delete Backup</string>
    <string name="nav_view">View</string>
    <string name="nav_change_kml_script">Change KML Script...</string>
    <string name="nav_show_kml_script_compilation_result">Show KML Script Compilation Result</string>
    <string name="nav_show_printer">Show the Printer Simulator...</string>
    <string name="nav_virtual_keyboard">Virtual Keyboard</string>
    <string name="nav_tool">Tool</string>
	<string name="nav_create_ram_card">Create RAM Card (HP48)...</string>
...
	<string name="ram_cards_item_6">4mb (32 ports: 2 through 33)</string>

	<string name="alert_manage_flash_rom_description">The following actions may reset the calculator without losing the memory.</string>
	<string name="alert_manage_flash_rom_button_create">Create Flash ROM file from current KML...</string>
	<string name="alert_manage_flash_rom_button_load">Load Flash ROM file...</string>
	<string name="alert_manage_flash_rom_button_reset">Reset Flash ROM to default KML settings</string>
	<string name="alert_manage_flash_rom_button_cancel">Cancel</string>
	<string name="alert_losing_flash_rom_title">Are you sure?</string>
	<string name="alert_losing_flash_rom_message">You already have a loaded flash ROM file. Are you sure to replace its?</string>
	<string name="alert_load_new_flash_rom_title">Load New Flash ROM?</string>
	<string name="alert_load_flash_rom_error_title">Error when Loading Flash ROM</string>
	<string name="alert_load_flash_rom_error_message">Cannot load the Flash ROM. Reset to the default Flash ROM (from the current KML script). Please, try to load it again from the menu.</string>

...
